--- a/Hr_manager/Hr_manager/VisualApp/PagesApp/PageMainMenu.xaml
+++ b/Hr_manager/Hr_manager/VisualApp/PagesApp/PageMainMenu.xaml
@@ -47,7 +47,7 @@
                 <Button Content="CT" ToolTip="создать задачу" Margin="5" Background="#FF61C8AD"/>
                 <Button  ToolTip="закрыть заадчу" Margin="5" Background="#FF61C8AD"/>
                 <Button ToolTip="сформировать отчёт" Margin="5" Background="#FF61C8AD"/>
-                <Button ToolTip="просмотреть отчёт" Margin="5" Background="#FF61C8AD"/>
+                <Button Content="ДЛ" Click="Button_Click" ToolTip="лобавить локацию" Margin="5" Background="#FF61C8AD"/>
                 <Button Content="ДС" Click="ClEventAddStr" ToolTip="добавить стажера" Margin="5" Background="#FF61C8AD"/>
                 <Button ToolTip="добавить HR" Margin="5" Background="#FF61C8AD"/>
                 <Button ToolTip="пометить выполненное задание" Margin="5" Background="#FF61C8AD"/>
