--- a/Hr_manager/Hr_manager/VisualApp/PagesApp/PageMainMenu.xaml
+++ b/Hr_manager/Hr_manager/VisualApp/PagesApp/PageMainMenu.xaml
@@ -37,14 +37,14 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Button Content="стажеры" Grid.Column="0" Background="#FF61C8AD" BorderThickness="0" Margin="5" Height="90" FontSize="24"/>
-            <Button Content="задачи" Grid.Column="1" Background="#FFF2AEA3" BorderThickness="0" Margin="5" Height="90" FontSize="24"/>
+            <Button Content="задачи" Click="ClEventShowListTask" Grid.Column="1" Background="#FFF2AEA3" BorderThickness="0" Margin="5" Height="90" FontSize="24"/>
             <Button Content="отчеты" Grid.Column="2" Background="#FF234B6E" BorderThickness="0" Margin="5" Height="90" FontSize="24"/>
            
         </Grid>
         <StackPanel Background="#FFEDEEF2" Margin="5" Grid.Column="2" Grid.Row="2" Grid.RowSpan="2">
             <Label Content="инструменты"/>
             <WrapPanel>
-                <Button Content="CT" ToolTip="создать задачу" Margin="5" Background="#FF61C8AD"/>
+                <Button Content="CT" ToolTip="создать задачу" Click="CLEventAddTask" Margin="5" Background="#FF61C8AD"/>
                 <Button  ToolTip="закрыть заадчу" Margin="5" Background="#FF61C8AD"/>
                 <Button ToolTip="сформировать отчёт" Margin="5" Background="#FF61C8AD"/>
                 <Button Content="ДЛ" Click="Button_Click" ToolTip="лобавить локацию" Margin="5" Background="#FF61C8AD"/>
@@ -53,7 +53,7 @@
                 <Button ToolTip="пометить выполненное задание" Margin="5" Background="#FF61C8AD"/>
                 <Button ToolTip="уволить стажера" Margin="5" Background="#FF61C8AD"/>
                 <Button ToolTip="список не выполненных задач" Margin="10" Background="#FF61C8AD"/>
-                <Button ToolTip="перенести задачу" Margin="10" Background="#FF61C8AD"/>
+                <Button ToolTip="перенести задачу" Content="ВЗ" Click="ClEventCHTaskIntr" Margin="10" Background="#FF61C8AD"/>
                 <Button Content="1" Margin="10" Background="#FF61C8AD"/>
                 <Button Content="1" Margin="10" Background="#FF61C8AD"/>
                 <Button Content="1" Margin="10" Background="#FF61C8AD"/>
