--- a/Hr_manager/Hr_manager/VisualApp/PagesApp/PageListTask.xaml
+++ b/Hr_manager/Hr_manager/VisualApp/PagesApp/PageListTask.xaml
@@ -15,8 +15,12 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <StackPanel>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="8*"/>
+        </Grid.RowDefinitions>
             <Button Content="Menu" Click="CLEventRevers"/>
+        <StackPanel Grid.Row="1">
             <ListView x:Name="ListTaskCreate" SelectionChanged="ListTaskCreate_SelectionChanged">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -28,8 +32,8 @@
                 </ListView.ItemTemplate>
             </ListView>
         </StackPanel>
-        <StackPanel Grid.Column="1">
-            <ListView x:Name="ListTaskAdd">
+        <StackPanel Grid.Column="1" Grid.Row="1">
+            <ListView x:Name="ListTaskAdd" SelectionChanged="ListTaskCreate_SelectionChanged">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
@@ -40,8 +44,8 @@
                 </ListView.ItemTemplate>
             </ListView>
         </StackPanel>
-        <StackPanel Grid.Column="2">
-            <ListView x:Name="ListTaskRedi">
+        <StackPanel Grid.Column="2" Grid.Row="1">
+            <ListView x:Name="ListTaskRedi" SelectionChanged="ListTaskCreate_SelectionChanged">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
@@ -52,8 +56,8 @@
                 </ListView.ItemTemplate>
             </ListView>
         </StackPanel>
-        <StackPanel Grid.Column="3">
-            <ListView x:Name="ListTaskError">
+        <StackPanel Grid.Column="3" Grid.Row="1">
+            <ListView x:Name="ListTaskError" SelectionChanged="ListTaskCreate_SelectionChanged">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
