--- a/Hr_manager/Hr_manager/VisualApp/PagesApp/PageMainMenu.xaml
+++ b/Hr_manager/Hr_manager/VisualApp/PagesApp/PageMainMenu.xaml
@@ -60,15 +60,14 @@
         <StackPanel Background="#FFEDEEF2" Margin="5" Grid.Column="2" Grid.Row="2" Grid.RowSpan="2">
             <Label Content="инструменты"/>
             <WrapPanel>
-                <Button Content="CT" ToolTip="создать задачу" Click="CLEventAddTask" Margin="5" Background="Blue"/>
-                <Button ToolTip="сформировать отчёт" Margin="5" Background="#FF61C8AD"/>
-                <Button Content="ДЛ" Click="Button_Click" ToolTip="лобавить локацию" Margin="5" Background="Blue"/>
-                <Button Content="ДС" Click="ClEventAddStr" ToolTip="добавить стажера" Margin="5" Background="Blue"/>
+                <Button Content="создать задачу" ToolTip="создать задачу" Click="CLEventAddTask" Margin="5" Background="Blue"/>
+                <Button ToolTip="сформировать отчёт x" Content="X" Margin="5" Click="ClEventCreateXReport" Background="#FF61C8AD"/>
+                <Button Content="Добавить локацию" Click="Button_Click" ToolTip="лобавить локацию" Margin="5" Background="Blue"/>
+                <Button Content="Добавить Стажёра" Click="ClEventAddStr" ToolTip="добавить стажера" Margin="5" Background="Blue"/>
                 <Button ToolTip="добавить HR" Margin="5" Background="#FF61C8AD"/>
-                <Button ToolTip="пометить выполненное задание" Content="ПВ" Click="CLEventTaskComplit" Margin="5" Background="Blue"/>
+                <Button ToolTip="пометить выполненное задание" Content="закрыть задачу" Click="CLEventTaskComplit" Margin="5" Background="Blue"/>
                 <Button ToolTip="уволить стажера" Margin="5" Background="#FF61C8AD"/>
-                <Button ToolTip="список не выполненных задач" Margin="10" Background="#FF61C8AD"/>
-                <Button ToolTip="перенести задачу" Content="ВЗ" Click="ClEventCHTaskIntr" Margin="10" Background="Blue"/>
+                <Button ToolTip="перенести задачу" Content="привязать задачу" Click="ClEventCHTaskIntr" Margin="10" Background="Blue"/>
                 <Button Content="1" Margin="10" Background="#FF61C8AD"/>
                 <Button Content="1" Margin="10" Background="#FF61C8AD"/>
                 <Button Content="1" Margin="10" Background="#FF61C8AD"/>
