--- a/Hr_manager/Hr_manager/VisualApp/PagesApp/PageMainMenu.xaml
+++ b/Hr_manager/Hr_manager/VisualApp/PagesApp/PageMainMenu.xaml
@@ -54,7 +54,7 @@
             </Grid.ColumnDefinitions>
             <Button Content="стажеры" Grid.Column="0" Background="#FF61C8AD" Click="ClEventShowIntern" BorderThickness="0" Margin="5" Height="90" FontSize="24"/>
             <Button Content="задачи" Click="ClEventShowListTask" Grid.Column="1" Background="#FFF2AEA3" BorderThickness="0" Margin="5" Height="90" FontSize="24"/>
-            <Button Content="отчеты" Grid.Column="2" Background="#FF234B6E" BorderThickness="0" Margin="5" Height="90" FontSize="24"/>
+            <Button Content="отчеты" Click="ClEventCreateXReport" Grid.Column="2" Background="#FF234B6E" BorderThickness="0" Margin="5" Height="90" FontSize="24"/>
            
         </Grid>
         <StackPanel Background="#FFEDEEF2" Margin="5" Grid.Column="2" Grid.Row="2" Grid.RowSpan="2">
